# memo

./: .gitignore  .vercelignore  DEPLOY.md  FEATURES.md  MANUAL.md  README.md  SUPABASE-GEMINI-SETUP.md  SUPABASE-SETUP.md  admin.html  admin.js  ai-diagrams.js  app-integration.js  app.html  bio-paper-rest-data.js  bio-paper-rest.html  calendar-data.js  calendar-pro.js  capacitor.config.json  cms-addons.js  cms-loader.js  command-palette.js  config.js  embed.html  extension-connect.html  feedback-widget.js  frameless-patch.js  graph.html  home-hub.js  home.html  idb-store.js  img-converter-upgrades.js  index.html  jan-fileio.js  landing-auth.js  landing.html  lecture-adapter.js  lecture-mode.js  login-persist.js  manifest.json  media-upgrades.js  (+47 more)
.github/workflows/: android-build.yml  ios-build.yml  tauri-build.yml  v2-ci.yml
adapters/: dropbox.js  gdrive.js  local-folder.js  onedrive.js  supabase-legacy.js
api/: gemini.js  lecture-ai.mjs  v2-ai.js
dist-v2/: index.html  manifest.webmanifest  sw-v2.js
dist-v2/assets/: AboutModal-4a_2BIeT.js  AboutModal-4a_2BIeT.js.map  AboutModal-8Cv4PtGn.js  AboutModal-8Cv4PtGn.js.map  AboutModal-9NXJ61Hp.js  AboutModal-9NXJ61Hp.js.map  (+5556 more)
docs/: v1-v2-parity.md  v2-agent-ops.md
scripts/: release-web.js  release.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  postit.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
store-metadata/: README.md
supabase/: lecture-schema.sql
v2/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
(+180 files in other folders)
