[package]
name = "justanotepad"
version = "1.0.2"
description = "JustANotepad Desktop"
authors = ["JustANotepad <auto0104@gmail.com>"]
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "justanotepad"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
